<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BARK it</string>

  <string name="menu_world">Places</string>
  <string name="current_version">v1.0.0</string>
  <string name="navigation_drawer_barks">Barks</string>
  <string name="navigation_drawer_places">PLACES</string>
  <string name="flag">Flag</string>
    <string name="title_activity_maps">Map</string>
  <string name="menu_search">search</string>
    <string name="title_activity_places">Places</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
  <string name="your_opinion">Your Opinion</string>
  <string name="invite_friends">Invite Friends</string>
  <string name="more">More</string>
  <string name="random_bark_0">cool</string>
  <string name="random_bark_1">oh hai!</string>
  <string name="random_bark_2">♥</string>
  <string name="random_bark_3">wow</string>
  <string name="random_bark_4">BARK</string>
  <string name="random_bark_5">\?</string>
  <string name="random_bark_undefined">\??</string>
  <string name="share_using">share using …</string>
  <string name="your_opinion_counts">Your Opinion Counts</string>
  <string name="profile">Profile</string>
  <string name="loading">Loading …</string>
  <string name="report_error">Report an Error</string>
  <string name="first_to_reply">Be the first to reply!</string>
  <string name="skip">skip</string>
  <string name="settings">Settings</string>
  <string name="app">App</string>
  <string name="share_bark">Share</string>
  <string name="facebook">Facebook</string>
  <string name="shadow">shadow</string>
  <string name="navigation_drawer_mybarks">My Barks</string>
    <string name="title_activity_my_barks">MyBarksActivity</string>
  <string name="limited_edition">limited Edition</string>
  <string name="bark_it_logo">BARK it Logo</string>
    <string name="title_activity_fullscreen_picture">FullscreenPictureActivity</string>
  <string name="restore_location">Restore Location</string>
  <string name="open_picture">Open Picture</string>
  <string name="star">Star</string>
  <string name="location_not_found">Your location could no be found. Please try again later.</string>
  <string name="failed_to_load_replies">Failed to load replies, please try again later.</string>
  <string name="please_wait_try_again">Please wait a few seconds to reply again</string>
  <string name="inappropriate_bark">Inappropriate BARK</string>
  <string name="are_you_sure_flag">Are you sure you want to flag this BARK?</string>
  <string name="inappropriate_reply">Inappropriate Reply</string>
  <string name="are_you_sure_flag_reply">Are you sure you want to flag this reply?</string>
  <string name="Bark_it_camera">Bark it Camera</string>
  <string name="directory_create_failed">failed to create directory</string>
  <string name="no_camera_on_phone">Sadly no camera was detected on your phone</string>
  <string name="picture_failed">Picture failed.</string>
  <string name="in_for_barks_in_location">in</string>
  <string name="please_wait_few_seconds">Please wait a few seconds to bark again</string>
  <string name="no_gps_plaease_enable_gps">No GPS data. Please enable GPS.</string>
  <string name="new_">New</string>
  <string name="hot">Hot</string>
  <string name="testing_barkit">I am using Bark it, check it out</string>
  <string name="my_barks">My Barks</string>
  <string name="invited_friends">Invited Friends</string>
  <string name="try_again_later">Try again later</string>
  <string name="using_barkit_check_it_out">I am using Barkit, check it out</string>
  <string name="download_and_enter_my_invite_code">"Download and enter my invite code at the start: "</string>
  <string name="failed_to_load_bark">Failed to load BARK</string>
  <string name="check_out_bark">Check out this BARK</string>
  <string name="start_barking">Start barking</string>
  <string name="bark_of_the_day">Bark Of The Day</string>
  <string name="notification_your_reply_has">Your reply has</string>
  <string name="notification_your_bark_has">Your bark has</string>
  <string name="points">points</string>
  <string name="new_replies">replies</string>
  <string name="bark_reply">Bark reply</string>
  <string name="content_flagged">Content flagged</string>
  <string name="already_flagged">Already flagged</string>
  <string name="submitted_picture_awaiting_approval">Successfully submitted picture, it will appear shortly</string>
  <string name="image_could_not_be_read">Image could not be read.</string>
  <string name="change_place">Change Place</string>
  <string name="click_on_any_place">Click on any place</string>
  <string name="selected_place">Selected Place</string>
  <string name="places">Places</string>
  <string name="intro_1_title">a Bark is ...</string>
  <string name="intro_2_title">Local</string>
  <string name="intro_3_title">Anonymous</string>
  <string name="intro_1_description">Your real-time gateway to local information</string>
  <string name="intro_2_description">Discover the most awesome activities suggested by Barkers like you</string>
  <string name="intro_3_description">Share your opinion</string>
  <string name="reloading_posts_for_new_position">Reloading posts for new position</string>
  <string name="enable_location_services">Please enable Location Services on your device.</string>
  <string name="enable_gps_better_barkit_experience">Please enable GPS on your device to improve your BARK it experience.</string>
  <string name="no_internet_connection">No internet connection</string>
  <string name="loading_gps_data">Loading GPS data ...</string>
  <string name="bark_now">Bark now ...</string>
  <string name="text">Text ...</string>
  <string name="featured_locations">Featured Locations</string>
  <string name="loading_invited_friends">Loading Invited Friends...</string>
  <string name="share_your_invite_code">Share your invite code</string>
  <string name="invite_friends_win_gifts">Invite Friends and win awesome gifts</string>
  <string name="be_the_frist_to_bark">Be the first to bark in this area</string>
  <string name="check_out_other_places">Check out other places instead</string>
  <string name="invite_local_friends_to_establish_new_community">Invite your local friends to establish a new community</string>
  <string name="loading_image">loading image ...</string>
  <string name="this_is_a_bark">This is a BARK</string>
  <string name="featured_place">Featured Place</string>
  <string name="invite_code_screen_title">BARK it is a tight-knit community</string>
  <string name="invite_code_screen_title_2">Are you fame enough to own a code?</string>
    <string name="title_activity_invite_code_restriction">InviteCodeRestriction</string>
  <string name="how_to_join_pack">How to join the pack?</string>
  <string name="how_to_get_code">How to get a code</string>
  <string name="enter_invite_code">Enter invite code</string>
  <string name="notification_sound">Notification Sound</string>
  <string name="notification_sound_description">Turn notification sound on or off</string>
  <string name="bark_of_the_day_description">Turn bark of the day notification on or off</string>
  <string name="notification_reply">Reply Notification</string>
  <string name="notification_reply_description">Turn reply notification on or off</string>
  <string name="notification_vote">Vote Notification</string>
  <string name="notification_vote_description">Turn vote notification on or off</string>
  <string name="rate_us">Rate us</string>
  <string name="my_stuff">My Stuff</string>
  <string name="my_replies">My Replies</string>

</resources>
