<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_comment_multiple_outline_black_48dp"
            android:title="@string/navigation_drawer_barks" />
        <item
            android:id="@+id/nav_places"
            android:icon="@drawable/ic_earth_black_48dp"
            android:title="@string/navigation_drawer_places" />
    </group>

    <item android:title="@string/more">
        <menu>
            <item
                android:id="@+id/nav_friends"
                android:icon="@drawable/ic_favorite_black_48dp"
                android:title="@string/invite_friends" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_feedback_black_48dp"
                android:title="@string/your_opinion" />
            <item
                android:id="@+id/nav_bug"
                android:icon="@drawable/ic_bug_report_black_48dp"
                android:title="@string/report_error" />
        </menu>
    </item>

</menu>
