<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/no_barks"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    android:background="@color/card_background">
        <LinearLayout
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="italic"
                android:gravity="right"
                android:layout_marginTop="18dp"
                android:text="@string/check_out_other_places" />

            <ImageView
                android:layout_marginTop="18dp"
                android:layout_marginLeft="16dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:tint="@color/secondary_text"
                android:src="@drawable/ic_keyboard_arrow_up_white_48dp"
                android:layout_centerInParent="true" />
        </LinearLayout>

        <TextView
            android:layout_above="@+id/friends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:textSize="24sp"
            android:textStyle="italic"
            android:gravity="center"
            android:layout_marginBottom="12dp"
            android:text="@string/be_the_frist_to_bark" />
        <ImageView
            android:id="@+id/friends"
            android:layout_marginTop="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/friends"
            android:layout_centerInParent="true" />
        <TextView
            android:layout_below="@+id/friends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:textSize="20sp"
            android:textStyle="italic"
            android:gravity="center"
            android:layout_marginTop="18dp"
            android:text="@string/invite_local_friends_to_establish_new_community" />
    </RelativeLayout>