<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_50"
    tools:context="com.barkitapp.android.startup.InviteCodeRestriction">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:background="@color/blue_500"
            android:id="@+id/title">
<!--
            <ImageView
                android:id="@+id/icon"
                android:layout_alignParentLeft="true"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/loading_dog"
                android:layout_marginLeft="24dp"
                android:layout_centerVertical="true"/>
-->
            <TextView
                android:layout_toRightOf="@+id/icon"
                android:id="@+id/title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textSize="24sp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:textColor="@color/white"
                android:text="@string/invite_code_screen_title" />

            <TextView
                android:layout_toRightOf="@+id/icon"
                android:id="@+id/title2"
                android:layout_below="@id/title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textSize="16sp"
                android:layout_marginTop="6dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:textColor="#AAFFFFFF"
                android:textStyle="italic"
                android:text="@string/invite_code_screen_title_2" />

        </RelativeLayout>

    <EditText
        android:layout_below="@id/title"
        android:id="@+id/code"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        android:textColorHint="@color/grey_500"
        android:gravity="center"
        android:textColor="@color/grey_900"
        android:inputType="none"
        android:hint="@string/enter_invite_code"
        android:theme="@style/Theme.App.Custom.EditText.Underline"
        android:maxLength="5"
        android:text="" />

    <com.dd.processbutton.iml.ActionProcessButton
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="12dp"
        android:layout_below="@id/code"
        android:id="@+id/btnVerify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:text="@string/start_barking"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        custom:pb_colorComplete="@color/accent"
        custom:pb_colorNormal="@color/blue_500"
        custom:pb_colorPressed="@color/blue_700"
        custom:pb_colorProgress="@color/amber_500"
        custom:pb_textComplete="Success"
        custom:pb_textProgress="verifying ..."
        custom:pb_textError="Invalid Code"
        custom:pb_colorError="@color/primary_dark" />
<!--
    <ImageView
        android:id="@+id/browser"
        android:layout_below="@+id/btnVerify"
        android:layout_alignParentLeft="true"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:src="@drawable/ic_open_in_browser_white_48dp"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="24dp"
        android:tint="@color/red_500"
        android:layout_centerVertical="true"/>
-->
    <RelativeLayout
        android:id="@+id/help"
        android:layout_below="@+id/btnVerify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/how_to_get"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="24sp"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="24dp"
        android:textColor="@color/teal_500"
        android:text="@string/how_to_join_pack" />

    <ImageView
        android:id="@+id/friends"
        android:layout_below="@+id/how_to_get"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/friends"
        android:layout_marginTop="12dp"
        android:layout_centerInParent="true"/>
    </RelativeLayout>
<!--
    <ImageView
        android:id</RelativeLayout>="@+id/help"
        android:layout_below="@+id/browser"
        android:layout_alignParentLeft="true"
        android:layout_width="28dp"
        android:tint="@color/grey_800"
        android:layout_height="28dp"
        android:src="@drawable/ic_live_help_white_48dp"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="24dp"
        android:layout_centerVertical="true"/>

    <TextView
        android:id="@+id/how_to_get_code"
        android:layout_below="@+id/how_to_get"
        android:layout_toRightOf="@+id/browser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textSize="24sp"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="24dp"
        android:textColor="@color/grey_800"
        android:text="@string/how_to_get_code" />

    <TextView
        android:id="@+id/one"
        android:layout_below="@+id/help"
        android:layout_toRightOf="@+id/browser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textSize="16sp"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="24dp"
        android:textColor="@color/grey_700"
        android:text="1. Ask a friend who is member of the BARK it community" />

    <TextView
        android:id="@+id/or"
        android:layout_below="@+id/one"
        android:layout_toRightOf="@+id/browser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textSize="16sp"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="24dp"
        android:textColor="@color/grey_700"
        android:textStyle="italic"
        android:text="or" />

    <TextView
        android:id="@+id/two"
        android:layout_below="@+id/or"
        android:layout_toRightOf="@+id/browser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textSize="16sp"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="24dp"
        android:textColor="@color/grey_700"
        android:text="2. Write us from your university or school email address: getacode@barkitapp.com" />
-->
</RelativeLayout>
