<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/detail_backdrop_height"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:fitsSystemWindows="true">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleMarginStart="48dp"
                app:expandedTitleMarginEnd="64dp">

                <RelativeLayout
                    android:id="@+id/backdrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:fitsSystemWindows="true"
                    android:background="@color/primary"
                    android:orientation="vertical"
                    app:layout_collapseMode="parallax">
                    <TextView
                        android:id="@+id/invitedFriendstext"
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:layout_marginRight="40dp"
                        android:layout_marginBottom="26dp"
                        android:layout_above="@+id/friend_count"
                        android:maxLines="1"
                        android:lines="1"
                        android:textSize="24sp"
                        android:textColor="@android:color/white"
                        android:text="@string/loading_invited_friends" />
                    <TextView
                        android:id="@+id/friend_count"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:layout_marginRight="40dp"
                        android:layout_marginBottom="40dp"
                        android:maxLines="1"
                        android:lines="1"
                        android:textSize="82sp"
                        android:textColor="@android:color/white"
                        android:text="..." />
                </RelativeLayout>

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    app:layout_collapseMode="pin" />

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <RelativeLayout
            android:layout_below="@id/appbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="16dp">
            <TextView
                android:id="@+id/share_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textSize="24sp"
                android:layout_margin="24dp"
                android:text="@string/share_your_invite_code" />
            <EditText
                android:id="@+id/code"
                android:layout_below="@id/share_code"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_margin="8dp"
                android:layout_height="wrap_content"
                android:textSize="36sp"
                android:textColor="@color/primary"
                android:textIsSelectable="true"
                android:inputType="none"
                android:text="-" />
            <TextView
                android:layout_below="@id/code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textSize="24sp"
                android:layout_margin="24dp"
                android:text="@string/invite_friends_win_gifts" />
        </RelativeLayout>
    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/share"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|right|end"
        android:src="@drawable/add_friend"
        android:layout_margin="@dimen/fab_margin"
        android:clickable="true"/>

</android.support.design.widget.CoordinatorLayout>